tests/03-typecheck/02-func-redefined.stack
func sum (int, int) (int, int) in
end

func sum (int) (int) in
end
